--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <section class="intro">
     <h1>BlockVerse Heroes</h1>
     <p>Добро пожаловать в коллекцию BlockVerse Heroes - NFT-вселенную, вдохновленную эстетикой Minecraft, Lego и Roblox.</p>
-    <p>Каждый герой - кубический авантюрист: от обычного игрока до легендарного хранителя магических артефактов..</p>
+    <p>Каждый герой - кубический авантюрист: от обычного игрока до легендарного хранителя магических артефактов.</p>
     <p>Классические пиксельные ландшафты, квадратные головы, простая и запоминающаяся стилистика - коллекция создана для тех, кто ценит культовые визуальные миры, но хочет собрать что-то своё, уникальное.</p>
     <p></p>
   </section>
