--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <section class="buttons">
     <a href="https://getgems.io/blockverse" target="_blank" class="btn">🌐 Перейти в Getgems</a>
-    <a href="https://t.me/by3069603$0" target="_blank" class="btn">💬 Связаться в Telegram</a>
+    <a href="https://t.me/by3069603" target="_blank" class="btn">💬 Связаться в Telegram</a>
   </section>
 
   <footer>
