--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
   <footer>
     <p>© 2025 BlockVerse Heroes. Все права защищены.</p>
+    <br>
+    <img src="CV.png" alt="CV">
   </footer>
 </body>
 </html>
